# activity-tracker-backend

./: .gitignore  activity_tracker.session.sql  config.py  main.py  pyproject.toml  test_main.http
db/: db.py
models/: activity.py  auth.py  friends.py  personal.py
routers/: activity_router.py  auth_router.py  dashboard_router.py  friend_router.py
services/: auth.py  friend.py  query.py
utils/: email.py  jwt_utils.py  password.py
